style: Fix text overflow, break only whole words when needed (#1601)

--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -10,7 +10,8 @@
   align-items: center;
   justify-content: space-between;
   min-height: 56px;
-  word-break: break-all;
+  word-break: normal;
+  overflow-wrap: anywhere;
   h2 {
     margin: 0;
   }
